infra/k8s/question.depl.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: question-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: question
  template:
    metadata:
      labels:
        app: question
    spec:
      containers:
      - name: question
        image: dilshadjr3312/question
          
---
apiVersion: v1
kind: Service
metadata:
  name: question-srv
spec:
  selector:
    app: question
  ports:
  - name: question
    protocol: TCP
    port: 3000
    targetPort: 3000
